# mar

./: AAIW_PV.ipynb  Bottom_Stratification.ipynb  Bottom_property_bias_WOA18.ipynb  Bottom_property_bias_WOA18_intercomparison.ipynb  Drake_Transport.ipynb  Global_Meridional_Overturning.ipynb  Overturning_zrho.ipynb  README.md  SST_bias_NOAA_OISSTv2.ipynb  Test_Notebook.ipynb  Tidal_Energy_Conversion_Deep.ipynb  basic_notebook.ipynb  experiment_intercomparison.ipynb  pyproject.toml  run_mar.sh
_Inline/: config-x86_64-linux-5.038002
_Inline/lib/auto/frepp_fd14/: frepp_fd14.inl  frepp_fd14.pydat
scripts/: gfdl-notebooks
src/gfdl-notebooks/ocean/: Drake_Transport.ipynb  Global_Meridional_Overturning.ipynb  SST_bias_NOAA_OISSTv2.ipynb
src/gfdl-notebooks/tools/: custom_preprocessor.py
src/gfdlnb/notebooks/ocean/: AAIW_PV.ipynb  ArcticMeanTempSalinity.ipynb  Bottom_property_bias_WOA18.ipynb  Drake_Transport.ipynb  ENSO_variability.ipynb  Global_Meridional_Overturning.ipynb  Mixed_Layer_Depths.ipynb  Northward_Heat_Transport.ipynb  Ocean_heat_content.ipynb  Overturning_zrho.ipynb  SO_Ross_AB_ice_thetao.ipynb  SOshelf_bottom_salinity.ipynb  SSS_bias.ipynb  SST_bias_NOAA_OISSTv2.ipynb  Tidal_Energy_Conversion_Deep.ipynb  Ventilation.ipynb  WMT_North_Atlantic.ipynb  WOA13_yz_bias.ipynb  WOA18_yz_bias.ipynb  ssh_wbc.ipynb
src/gfdlnb/resources/: config.yaml
src/gfdlnb/tools/: update_notebook_config.py
src/gfdlnotebooks/ocean/: Med_Outflow.ipynb
